feat: add vehicle position endpoint
